--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ setTimeout(()=>{
 </br></br></br></br></br>
 
 <div class="home_content">
-<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div style="padding-right: 20px" class="home_news_block">
+<!-- News --> <div style="padding-left: 25px; padding-right: 25px"><div class="home_news_block">
 <div style="position: absolute; right: 40px"><a style="font-size: 10px; color: #bf9000" href="https://ps2wiki.github.io/archive/news.html" class="clbtn">Previous News<sup>[↗]</sup></a></div>
 <div class="home_news_float"><div style="float: left"><img src="https://i.imgur.com/1UZvuCz.gif"/></div><div style="float: left" class="home_news_content"><strong style="font-size: 1.10em">{{ page.news }}</strong></div></div></div></div>
 
