--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,8 @@ hidden:
 <!-- Position --> <div class="home_parent">
   
 <!-- Page begins --><div style="margin-top: 80px">
-<h1 style="font-family: Faculty Glyphic; text-align: center; font-size: 3.5em; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
-<h1 style="font-size: 1.35em; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
+<h1 style="font-family: Faculty Glyphic; font-size: 3.5em; text-shadow: 0 0 3px #000000, 0 0 5px #000000; text-align: center; font-weight: bold; text-decoration: underline; color: #ffffff">The PS2 Homebrew Wiki</h1>
+<h1 style="font-size: 1.35em; text-shadow: 0 0 3px #000000, 0 0 5px #000000; text-align: center; font-weight: bold; color: #99b6b9">From Apps to Exploits, Games to Mods, the one website for all things PS2 Homebrew</h1>
 </div></br>
 <style>
 body {
